--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A web playground",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "cross-env NODE_ENV=production webpack --env.NODE_ENV=production --config webpack.config.js"
   },
   "repository": {
     "type": "git",
