--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A web playground",
   "main": "index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --env.NODE_ENV=production --config webpack.config.js"
+    "build": "cross-env NODE_ENV=production webpack --env.NODE_ENV=production",
+    "build:dev": "cross-env NODE_ENV=development webpack --env.NODE_ENV=development"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "postcss-loader": "^3.0.0",
     "sass": "^1.23.2",
     "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
   }
