--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A web playground",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --env.NODE_ENV=development",
+    "start": "webpack-dev-server --open --color --env.NODE_ENV=development",
     "build": "cross-env NODE_ENV=production webpack --env.NODE_ENV=production",
     "build:dev": "cross-env NODE_ENV=development webpack --env.NODE_ENV=development"
   },
@@ -24,6 +24,7 @@
     "@babel/preset-react": "^7.6.3",
     "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
