--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2"
   }
 }
