--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "stylelint": "^11.1.1",
+    "stylelint-scss": "^3.12.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
