--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A web playground",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --color --env.NODE_ENV=development --config config/webpack/webpack.config.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --env.NODE_ENV=development --config config/webpack/webpack.config.js",
     "build": "cross-env NODE_ENV=production webpack --env.NODE_ENV=production --config config/webpack/webpack.config.js",
-    "stylelint": "stylelint 'src/**/*.scss' --config config/stylelint.config.js; exit 0",
+    "stylelint": "stylelint 'src/**/*.scss' --config stylelint.config.js; exit 0",
     "lint": "npm run stylelint"
   },
   "repository": {
@@ -25,12 +25,14 @@
     "@babel/preset-react": "^7.6.3",
     "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.6",
+    "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "internal-ip": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
     "sass": "^1.23.2",
