--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "internal-ip": "^5.0.0",
+    "log-symbols": "^3.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
     "sass": "^1.23.2",
@@ -40,8 +41,12 @@
     "style-loader": "^1.0.0",
     "stylelint": "^11.1.1",
     "stylelint-scss": "^3.12.1",
+    "stylelint-webpack-plugin": "^1.0.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
+  },
+  "dependencies": {
+    "stylelint-formatter-pretty": "^1.1.3"
   }
 }
