Add style fix to scripts

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --env.NODE_ENV=development --config config/webpack/webpack.config.js",
     "build": "cross-env NODE_ENV=production webpack --env.NODE_ENV=production --config config/webpack/webpack.config.js",
     "stylelint": "stylelint 'src/**/*.scss' --config stylelint.config.js; exit 0",
+    "style:fix": "stylelint 'src/**/*.scss' --config stylelint.config.js --fix",
     "lint": "npm run stylelint"
   },
   "repository": {
