--- a/package.json
+++ b/package.json
@@ -41,13 +41,12 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "stylelint": "^11.1.1",
+    "stylelint-formatter-pretty": "^1.1.3",
     "stylelint-scss": "^3.12.1",
     "stylelint-webpack-plugin": "^1.0.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
   },
-  "dependencies": {
-    "stylelint-formatter-pretty": "^1.1.3"
-  }
+  "dependencies": {}
 }
