--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "A web playground",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --color --env.NODE_ENV=development",
-    "build": "cross-env NODE_ENV=production webpack --env.NODE_ENV=production",
-    "build:dev": "cross-env NODE_ENV=development webpack --env.NODE_ENV=development"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --env.NODE_ENV=development --config config/webpack/webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --env.NODE_ENV=production --config config/webpack/webpack.config.js",
+    "stylelint": "stylelint 'src/**/*.scss' --config stylelint.config.js; exit 0",
+    "style:fix": "stylelint 'src/**/*.scss' --config stylelint.config.js --fix",
+    "lint": "npm run stylelint"
   },
   "repository": {
     "type": "git",
@@ -24,17 +26,24 @@
     "@babel/preset-react": "^7.6.3",
     "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.6",
+    "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "internal-ip": "^5.0.0",
+    "log-symbols": "^3.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
     "sass": "^1.23.2",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "stylelint": "^11.1.1",
+    "stylelint-formatter-pretty": "^1.1.3",
+    "stylelint-scss": "^3.12.1",
+    "stylelint-webpack-plugin": "^1.0.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
