--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --env.NODE_ENV=development --config config/webpack/webpack.config.js",
     "build": "cross-env NODE_ENV=production webpack --env.NODE_ENV=production --config config/webpack/webpack.config.js",
     "stylelint": "stylelint 'src/**/*.scss' --config stylelint.config.js; exit 0",
-    "style:fix": "stylelint 'src/**/*.scss' --config stylelint.config.js --fix",
-    "lint": "npm run stylelint"
+    "eslint": "eslint 'src/**/*.js'; exit 0",
+    "es:fix": "eslint 'src/**/*.js' --fix",
+    "style:fix": "stylelint 'src/**/*.scss' --fix",
+    "lint": "npm run eslint && npm run stylelint"
   },
   "repository": {
     "type": "git",
@@ -25,12 +27,14 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "autoprefixer": "^9.7.0",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
+    "eslint": "^6.6.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "internal-ip": "^5.0.0",
@@ -48,5 +52,7 @@
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "eslint-loader": "^3.0.2"
+  }
 }
