--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "eslint": "^6.6.0",
+    "eslint-loader": "^3.0.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "internal-ip": "^5.0.0",
@@ -52,7 +53,5 @@
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
   },
-  "dependencies": {
-    "eslint-loader": "^3.0.2"
-  }
+  "dependencies": {}
 }
