--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,13 @@
 {
   "parser": "babel-eslint",
-  "rules": {}
+  "extends": ["airbnb"],
+  "env": {
+    "browser": true
+  },
+  "rules": {
+    "max-len": ["error", { "code": 80, "tabWidth": 2, "comments": 65 }],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-props-no-spreading": 0,
+    "react/require-default-props": 0
+  }
 }
