--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   },
   "rules": {
     "max-len": ["error", { "code": 80, "tabWidth": 2, "comments": 65 }],
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/jsx-props-no-spreading": 0,
     "react/require-default-props": 0
