--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eslint": "eslint 'src/**/*.js'; exit 0",
     "es:fix": "eslint 'src/**/*.js' --fix",
     "style:fix": "stylelint 'src/**/*.scss' --fix",
-    "lint": "npm run eslint && npm run stylelint"
+    "lint": "npm run eslint && npm run stylelint",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,8 @@
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-formatter-pretty": "^2.1.1",
@@ -47,6 +50,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "internal-ip": "^5.0.0",
+    "jest": "^24.9.0",
     "log-symbols": "^3.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
@@ -68,6 +72,7 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.11.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
