--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "es:fix": "eslint 'src/**/*.js' --fix",
     "style:fix": "stylelint 'src/**/*.scss' --fix",
     "lint": "npm run eslint && npm run stylelint",
-    "test": "jest"
+    "test": "jest",
+    "next:dev": "next",
+    "next:build": "next build",
+    "next:start": "next start"
   },
   "repository": {
     "type": "git",
@@ -53,6 +56,7 @@
     "jest": "^24.9.0",
     "log-symbols": "^3.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "next": "^9.1.3",
     "postcss-loader": "^3.0.0",
     "sass": "^1.23.2",
     "sass-loader": "^8.0.0",
