--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-test-renderer": "^16.11.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-jsx": "^3.2.4"
   }
 }
