--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "description": "A web playground",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --env.NODE_ENV=development --config config/webpack/webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack --env.NODE_ENV=production --config config/webpack/webpack.config.js",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
     "stylelint": "stylelint 'src/**/*.scss' --config stylelint.config.js; exit 0",
     "eslint": "eslint 'src/**/*.js'; exit 0",
     "es:fix": "eslint 'src/**/*.js' --fix",
     "style:fix": "stylelint 'src/**/*.scss' --fix",
     "lint": "npm run eslint && npm run stylelint",
-    "test": "jest",
-    "next:dev": "next",
-    "next:build": "next build",
-    "next:start": "next start"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -36,10 +34,7 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "chalk": "^2.4.2",
-    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
-    "cssnano": "^4.1.10",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.1.0",
@@ -50,14 +45,9 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "internal-ip": "^5.0.0",
     "jest": "^24.9.0",
     "log-symbols": "^3.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
     "next": "^9.1.3",
-    "postcss-loader": "^3.0.0",
     "sass": "^1.23.2",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
@@ -65,10 +55,7 @@
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-formatter-pretty": "^1.1.3",
     "stylelint-scss": "^3.12.1",
-    "stylelint-webpack-plugin": "^1.0.3",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0"
+    "stylelint-webpack-plugin": "^1.0.3"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
