--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.11.0",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
