--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
   "bugs": {
     "url": "https://github.com/RobCC/web-playground/issues"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/fileMock.js",
+      "\\.(css|less|scss)$": "identity-obj-proxy"
+    }
+  },
   "homepage": "https://github.com/RobCC/web-playground#readme",
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -49,6 +55,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "internal-ip": "^5.0.0",
     "jest": "^24.9.0",
     "log-symbols": "^3.0.0",
